@@ -4,29 +4,17 @@ class UserSession
   extend ActiveModel::Naming
 
   def authenticate(auth_opts)
-    authenticate_via(auth_opts) do |network, options|
-      network.authenticate(options)
-    end
-  end
-
-  def authenticate_by_token(auth_opts)
-    result = authenticate_via(auth_opts) do |network, options|
-      network.authenticate_by_token(options)
-    end
-
-    result
-  end
-
-  private
-
-  def authenticate_via(options, &block)
-    user = block.call(Network.new, options)
+    network = Network.new
+    user = network.authenticate(auth_opts)
 
     if user
+      user["access_token"] = auth_opts[:access_token]
       return User.new(user)
     else
       nil
     end
+
+    user
   rescue
     nil
   end
