@@ -7,12 +7,18 @@ class CreateProjectService
     Project.transaction do
       @project.save!
 
-      opts = {
+      data = {
         token: @project.token,
         project_url: project_route.gsub(":project_id", @project.id.to_s),
       }
 
-      unless Network.new.enable_ci(@project.gitlab_id, opts, current_user.private_token)
+      auth_opts = if current_user.access_token
+                    { access_token: current_user.access_token }
+                  else
+                    { private_token: current_user.private_token }
+                  end
+
+      unless Network.new.enable_ci(@project.gitlab_id, data, auth_opts)
         raise ActiveRecord::Rollback
       end
     end
